# yayav

./: .gitignore  README.md  bootstrap.sh  bundle.js  package.json  tailwind.config.js
.github/workflows/: publish.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/prerendered/pages/: rules.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: AccordionItem.js  ProgressBar.svelte_svelte_type_style_lang.js  client.js  index.js  index2.js  internal.js  model.js  state.svelte.js  stores.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.js  _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/detect/: $types.d.ts
sidecar-model/: bundle.js  index.js  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  yaylog.rs  yaymem.rs  yaynn.rs
src/components/: ClearLogButton.svelte  Dropdown.svelte  RulesetButton.svelte  TargetList.svelte
src/lib/: invoke-wrapper.js  model.js  ruleset.js  state.svelte.js
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/detect/: +page.svelte
src/routes/rules/: +page.svelte
(+45 files in other folders)
