[package]
name = "yayav"
version = "0.1.0"
description = "A Yara_x + Tauri + SvelteKit yara rule scanner."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
yara-x = "0.13.0"
tauri-plugin-fs = "2"
dirs = "6.0.0"
lazy_static = "1.5.0"
chrono = "0.4"
colored = "2.0"
tokio = "1.43.0"
tauri-plugin-dialog = "2"
once_cell = "1.20.2"
walkdir = "2"
rayon = "1.10.0"
read-process-memory = "0.1.6"
sysinfo = "0.33.1"
